--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@ body {
 </style>
 </head>
 
-<title>Smart CCTV - smartbuilds.io</title>
+<title>Smart CAM² - SPOC lab</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
