--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@ body {
 </div>
 
   <div class="top-right-logo">
-  	<a>smartbuilds.io</a>
+  	<a>Smart CAM² - SPOC lab</a>
   </div>
 
 
@@ -182,6 +182,16 @@ body {
                     <i class="fa fa-shield fa-rotate-270 fa-2x" style="color: white" aria-hidden="true" ></i>
               </button>
             </a>
+            <a href=# id=automatic_start>
+              <button>                  
+                    <i class="fa fa-camera-retro fa-2x" style="color: rgb(28, 228, 28)" aria-hidden="true" ></i>
+              </button>
+            </a>
+            <a href=# id=automatic_stop>
+              <button>                  
+                    <i class="fa fa-camera-retro fa-2x" style="color: rgb(163, 14, 14)" aria-hidden="true" ></i>
+              </button>
+            </a>
         </div>
     </form>
 
@@ -211,8 +221,8 @@ body {
             return false;
           });
         
-        // - Motor - right
-        $('a#right').bind('click', function() {
+          // - Motor - right
+          $('a#right').bind('click', function() {
             $.getJSON('/right',
                 function(data) {
               //do nothing
@@ -220,9 +230,27 @@ body {
             return false;
           });
         
-                // - Motor - fourth
-                $('a#fourth').bind('click', function() {
+          // - Motor - fourth
+          $('a#fourth').bind('click', function() {
             $.getJSON('/fourth',
+                function(data) {
+              //do nothing
+            });
+            return false;
+          });
+
+          // - automatic start
+          $('a#automatic_start').bind('click', function() {
+            $.getJSON('/automatic_start',
+                function(data) {
+              //do nothing
+            });
+            return false;
+          });
+
+          // - automatic stop
+          $('a#automatic_stop').bind('click', function() {
+            $.getJSON('/automatic_stop',
                 function(data) {
               //do nothing
             });
