--- a/templates/index.html
+++ b/templates/index.html
@@ -188,6 +188,11 @@ body {
                     <i class=" fa-hand-spock-o fa" style="color: rgb(207, 41, 41)" aria-hidden="true" ></i>
               </button>
             </a>
+            <a href=# id=picture>
+              <button>                  
+                    <i class=" fa-camera fa" style="color: rgb(28, 168, 28)" aria-hidden="true" ></i>
+              </button>
+            </a>
         </div>
     </form>
 
@@ -255,6 +260,15 @@ body {
     // - settings
     $('a#settings').bind('click', function() {
       $.getJSON('/settings',
+          function(data) {
+        //do nothing
+      });
+      return false;
+    });
+
+    // - picture
+    $('a#picture').bind('click', function() {
+      $.getJSON('/picture',
           function(data) {
         //do nothing
       });
