--- a/templates/index.html
+++ b/templates/index.html
@@ -108,6 +108,15 @@ button {
   opacity: 0.5;
 }
 
+.automatic-info {
+  position: absolute;
+  top: 3%;
+  left: 50%;
+  font-size: 20px;
+  color: white;
+  opacity: 0.5;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -119,25 +128,106 @@ body {
 
 </style>
 </head>
-<!-- toggle switch -->
-<html>
-  <body>
-    <head>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-      <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-      <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-    </head>
-    <!-- this makes round buttons -->
-    <style>
-      .toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
-      .toggle.ios .toggle-handle { border-radius: 20px; }
-    </style>
-    <input type="checkbox" class='toggle' checked data-toggle="toggle" data-onstyle="success" data-style="ios">
-    <div class='status'>Automatic Off</div>
-  </body>
-  <script>
+
+<title>Smart CAM² - SPOC lab</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<body>
+
+<div class="main" id="newpost">
+  <img  class="camera-bg" style="width: 100%; height:80%; background-attachment: fixed;" id="bg" class="center" src="{{ url_for('video_feed') }}">
+  <!--<img  class="camera-bg" style="width: 100%; height:80%; background-attachment: fixed;" id="bg" class="center" src="https://www.psdbox.com/wp-content/uploads/2011/01/security-camera-photoshop-effect.jpg">-->
+     
+</div>
+
+<div class="top-right-logo">
+  <a>Smart CAM² - SPOC lab</a>
+</div>
+
+
+<div class="automatic-info">
+  <div class='status'>Automatic Off</div>
+</div>
+
+
+
+<div class="navbar">
+
+  <div class="ignoreCall">
+    <a id=decline class="but_def">
+      <button id="button"> 
+          <i style="background: red; color: white;" class="fa fa-times fa" aria-hidden="true"></i>
+      </button>
+    </a>       
+  </div>
+
+  <form method = "post">
+      <div class="camera-movement">
+        <a href=# id=href_0>
+        <button>                   
+              <i class="fa fa-shield fa" style="color: white" aria-hidden="true"></i>
+        </button>
+        </a>
+        <a href=# id=href_90>
+          <button>                   
+                <i class="fa fa-shield fa-rotate-90 fa" style="color: white" aria-hidden="true"></i>
+          </button>
+        </a>
+        <a href=# id=href_180>
+          <button>                  
+                <i class="fa fa-shield fa-rotate-180 fa" style="color: white" aria-hidden="true" ></i>
+          </button>
+        </a>
+        <a href=# id=href_270>
+          <button>                  
+                <i class="fa fa-shield fa-rotate-270 fa" style="color: white" aria-hidden="true" ></i>
+          </button>
+        </a>
+        <!-- <a href=# id=automatic_start>
+          <button>                  
+                <i class=" fa-hand-spock-o fa" style="color: rgb(25, 187, 25)" aria-hidden="true" ></i>
+          </button>
+        </a>
+        <a href=# id=automatic_stop>
+          <button>                  
+                <i class=" fa-hand-spock-o fa" style="color: rgb(207, 41, 41)" aria-hidden="true" ></i>
+          </button>
+        </a> -->
+        <a href=# id=picture>
+          <button>                  
+                <i class=" fa-camera fa" style="color: rgb(28, 168, 28)" aria-hidden="true" ></i>
+          </button>
+        </a>
+          <!-- this makes round buttons -->
+        <a href=# id=toggle-switch>
+          <style>
+            .toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
+            .toggle.ios .toggle-handle { border-radius: 20px; }
+          </style>
+          <input type="checkbox" class='toggle' checked data-toggle="toggle" data-onstyle="success" data-style="ios">
+
+        </a>
+        
+      </div>
+
+      <div class="settings">
+        <a href=# id=center>
+          <button>                   
+                <i class="fa fa-gears fa" style="color: white" aria-hidden="true"></i>
+          </button>
+        </a>
+      </div>
+  </form>
+
+</div>
+
+<script>
   $(document).ready(function() {
     $('.toggle').click(function() {
     var current_status = $('.status').text();
@@ -154,86 +244,7 @@ body {
     });
     });
   });
- </script>
-</html>
-<!-- end of toggle -->
-<title>Smart CAM² - SPOC lab</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<body>
-
-<div class="main" id="newpost">
-  <img  class="camera-bg" style="width: 100%; height:80%; background-attachment: fixed;" id="bg" class="center" src="{{ url_for('video_feed') }}">
-  <!--<img  class="camera-bg" style="width: 100%; height:80%; background-attachment: fixed;" id="bg" class="center" src="https://www.psdbox.com/wp-content/uploads/2011/01/security-camera-photoshop-effect.jpg">-->
-     
-</div>
-
-<div class="top-right-logo">
-  <a>Smart CAM² - SPOC lab</a>
-</div>
-
-<div class="navbar">
-
-    <div class="ignoreCall">
-          <a id=decline class="but_def">
-              <button id="button"> 
-                  <i style="background: red; color: white;" class="fa fa-times fa" aria-hidden="true"></i>
-              </button>
-         </a>       
-    </div>
-
-    <div class="settings">
-              
-            <a href=# id=center>
-              <button>                   
-                    <i class="fa fa-gears fa" style="color: white" aria-hidden="true"></i>
-              </button>
-            </a>
-    </div>
-        
-    <form method = "post">
-            
-        <div class="camera-movement">
-              <a href=# id=href_0>
-              <button>                   
-                    <i class="fa fa-shield fa" style="color: white" aria-hidden="true"></i>
-              </button>
-            </a>
-            <a href=# id=href_90>
-              <button>                   
-                    <i class="fa fa-shield fa-rotate-90 fa" style="color: white" aria-hidden="true"></i>
-              </button>
-            </a>
-            <a href=# id=href_180>
-              <button>                  
-                    <i class="fa fa-shield fa-rotate-180 fa" style="color: white" aria-hidden="true" ></i>
-              </button>
-            </a>
-            <a href=# id=href_270>
-              <button>                  
-                    <i class="fa fa-shield fa-rotate-270 fa" style="color: white" aria-hidden="true" ></i>
-              </button>
-            </a>
-            <a href=# id=automatic_start>
-              <button>                  
-                    <i class=" fa-hand-spock-o fa" style="color: rgb(25, 187, 25)" aria-hidden="true" ></i>
-              </button>
-            </a>
-            <a href=# id=automatic_stop>
-              <button>                  
-                    <i class=" fa-hand-spock-o fa" style="color: rgb(207, 41, 41)" aria-hidden="true" ></i>
-              </button>
-            </a>
-            <a href=# id=picture>
-              <button>                  
-                    <i class=" fa-camera fa" style="color: rgb(28, 168, 28)" aria-hidden="true" ></i>
-              </button>
-            </a>
-        </div>
-    </form>
-
-</div>
+</script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type=text/javascript>
