removed old unsued buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -287,23 +287,23 @@ body {
       return false;
     });
 
-    // - automatic start
-    $('a#automatic_start').bind('click', function() {
-      $.getJSON('/automatic_start',
-          function(data) {
-        //do nothing
-      });
-      return false;
-    });
+    // // - automatic start
+    // $('a#automatic_start').bind('click', function() {
+    //   $.getJSON('/automatic_start',
+    //       function(data) {
+    //     //do nothing
+    //   });
+    //   return false;
+    // });
 
-    // - automatic stop
-    $('a#automatic_stop').bind('click', function() {
-      $.getJSON('/automatic_stop',
-          function(data) {
-        //do nothing
-      });
-      return false;
-    });
+    // // - automatic stop
+    // $('a#automatic_stop').bind('click', function() {
+    //   $.getJSON('/automatic_stop',
+    //       function(data) {
+    //     //do nothing
+    //   });
+    //   return false;
+    // });
 
     // - settings
     $('a#settings').bind('click', function() {
