removal of non existing buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -216,13 +216,13 @@ body {
         
       </div>
 
-      <div class="settings">
+      <!-- <div class="settings">
         <a href=# id=center>
           <button>                   
                 <i class="fa fa-gears fa" style="color: white" aria-hidden="true"></i>
           </button>
         </a>
-      </div>
+      </div> -->
   </form>
 
 </div>
@@ -305,14 +305,14 @@ body {
     //   return false;
     // });
 
-    // - settings
-    $('a#settings').bind('click', function() {
-      $.getJSON('/settings',
-          function(data) {
-        //do nothing
-      });
-      return false;
-    });
+    // // - settings
+    // $('a#settings').bind('click', function() {
+    //   $.getJSON('/settings',
+    //       function(data) {
+    //     //do nothing
+    //   });
+    //   return false;
+    // });
 
     // - picture
     $('a#picture').bind('click', function() {
