--- a/templates/index.html
+++ b/templates/index.html
@@ -205,14 +205,13 @@ body {
           </button>
         </a>
           <!-- this makes round buttons -->
-        <a href=# id=toggle-switch>
+        <!-- <a href=# id=toggle-switch>
           <style>
             .toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
             .toggle.ios .toggle-handle { border-radius: 20px; }
           </style>
           <input type="checkbox" class='toggle' checked data-toggle="toggle" data-onstyle="success" data-style="ios">
-
-        </a>
+        </a> -->
         
       </div>
 
