--- a/templates/index.html
+++ b/templates/index.html
@@ -226,7 +226,7 @@ body {
 
 </div>
 
-<script>
+<!-- <script>
   $(document).ready(function() {
     $('.toggle').click(function() {
     var current_status = $('.status').text();
@@ -243,7 +243,7 @@ body {
     });
     });
   });
-</script>
+</script> -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type=text/javascript>
