scripts excluded button toggle there

--- a/templates/index.html
+++ b/templates/index.html
@@ -205,13 +205,13 @@ body {
           </button>
         </a>
           <!-- this makes round buttons -->
-        <!-- <a href=# id=toggle-switch>
+        <a href=# id=toggle-switch>
           <style>
             .toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
             .toggle.ios .toggle-handle { border-radius: 20px; }
           </style>
           <input type="checkbox" class='toggle' checked data-toggle="toggle" data-onstyle="success" data-style="ios">
-        </a> -->
+        </a>
         
       </div>
 
@@ -226,7 +226,7 @@ body {
 
 </div>
 
-<!-- <script>
+<script>
   $(document).ready(function() {
     $('.toggle').click(function() {
     var current_status = $('.status').text();
@@ -243,7 +243,7 @@ body {
     });
     });
   });
-</script> -->
+</script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type=text/javascript>
