--- a/templates/index.html
+++ b/templates/index.html
@@ -183,16 +183,6 @@ body {
                 <i class="fa fa-shield fa-rotate-270 fa" style="color: white" aria-hidden="true" ></i>
           </button>
         </a>
-        <!-- <a href=# id=automatic_start>
-          <button>                  
-                <i class=" fa-hand-spock-o fa" style="color: rgb(25, 187, 25)" aria-hidden="true" ></i>
-          </button>
-        </a>
-        <a href=# id=automatic_stop>
-          <button>                  
-                <i class=" fa-hand-spock-o fa" style="color: rgb(207, 41, 41)" aria-hidden="true" ></i>
-          </button>
-        </a> -->
         <a href=# id=picture>
           <button>                  
                 <i class=" fa-camera fa" style="color: rgb(28, 168, 28)" aria-hidden="true" ></i>
@@ -220,9 +210,9 @@ body {
 
 </div>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script> -->
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
@@ -245,7 +235,7 @@ body {
   });
 </script>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 <script type=text/javascript>
   $(function() {
     
@@ -285,24 +275,6 @@ body {
       });
       return false;
     });
-
-    // // - automatic start
-    // $('a#automatic_start').bind('click', function() {
-    //   $.getJSON('/automatic_start',
-    //       function(data) {
-    //     //do nothing
-    //   });
-    //   return false;
-    // });
-
-    // // - automatic stop
-    // $('a#automatic_stop').bind('click', function() {
-    //   $.getJSON('/automatic_stop',
-    //       function(data) {
-    //     //do nothing
-    //   });
-    //   return false;
-    // });
 
     // // - settings
     // $('a#settings').bind('click', function() {
