--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@ body {
 
 
 <div class="automatic-info">
-  <div class='status'>Automatic Off</div>
+  <div class='status'>Automatic On</div>
 </div>
 
 
