gallery links working

--- a/templates/index.html
+++ b/templates/index.html
@@ -165,32 +165,32 @@ body {
       <div class="camera-movement">
         <a href=# id=href_0>
         <button>                   
-              <i class="fa fa-shield fa" style="color: white" aria-hidden="true"></i>
+          <i class="fa fa-shield fa" style="color: white" aria-hidden="true"></i>
         </button>
         </a>
         <a href=# id=href_90>
           <button>                   
-                <i class="fa fa-shield fa-rotate-90 fa" style="color: white" aria-hidden="true"></i>
+            <i class="fa fa-shield fa-rotate-90 fa" style="color: white" aria-hidden="true"></i>
           </button>
         </a>
         <a href=# id=href_180>
           <button>                  
-                <i class="fa fa-shield fa-rotate-180 fa" style="color: white" aria-hidden="true" ></i>
+            <i class="fa fa-shield fa-rotate-180 fa" style="color: white" aria-hidden="true" ></i>
           </button>
         </a>
         <a href=# id=href_270>
           <button>                  
-                <i class="fa fa-shield fa-rotate-270 fa" style="color: white" aria-hidden="true" ></i>
+            <i class="fa fa-shield fa-rotate-270 fa" style="color: white" aria-hidden="true" ></i>
           </button>
         </a>
-        <a href=# id=href_gallery>
-          <button>                  
-                <i class="fa fa-object-group fa" style="color: white" aria-hidden="true" ></i>
+        <a>
+          <button> 
+            <a class="fa fa-files-o" style="color: rgb(28, 168, 28);" href="/gallery" aria-hidden="true" ></a>
           </button>
         </a>
         <a href=# id=picture>
           <button>                  
-                <i class="fa-camera fa" style="color: rgb(28, 168, 28)" aria-hidden="true" ></i>
+            <i class="fa-camera fa" style="color: rgb(28, 168, 28)" aria-hidden="true" ></i>
           </button>
         </a>
           <!-- this makes round buttons -->
