--- a/templates/index-gallery.html
+++ b/templates/index-gallery.html
@@ -10,7 +10,7 @@
         <nav class="navbar navbar-fixed navbar-inner header" style="padding: 0px 16px">
             <div class="navbar-brand" style="color: dodgerblue;display: table;">
                 <i class="fa fa-mail-reply fa-3x" style="color: dodgerblue;"></i>
-                <a href="http://127.0.0.1:80/" style="display: table-cell; vertical-align: middle; padding-left: 15px;">Back to live camera</a>
+                <a href="/" style="display: table-cell; vertical-align: middle; padding-left: 15px;">Back to live camera</a>
             </div>
 
             <ul class="nav pull-right">
