--- a/templates/index.html
+++ b/templates/index.html
@@ -194,13 +194,13 @@ body {
           </button>
         </a>
           <!-- this makes round buttons -->
-        <a href=# id=toggle-switch>
+        <!-- <a href=# id=toggle-switch>
           <style>
             .toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
             .toggle.ios .toggle-handle { border-radius: 20px; }
           </style>
           <input type="checkbox" class='toggle' checked data-toggle="toggle" data-onstyle="success" data-style="ios">
-        </a>
+        </a> -->
         
       </div>
 
@@ -215,10 +215,10 @@ body {
 
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
 <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<!-- <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
 <script>
@@ -238,9 +238,9 @@ body {
     });
     });
   });
-</script>
+</script> -->
 
-<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type=text/javascript>
   $(function() {
     
